syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.homo.proto.client";
option java_outer_classname = "ClientProxy";

package msg;

//message ClientRouterMsg {
//  string appId =1;
//  string srcService = 2;
//  string token = 3;
//  string userId = 4;
//  string channelId = 5;
//  string msgId = 6;
//  string sign = 7;
//  repeated bytes msgContent = 8;
//}
//message PbResponseMsg{
//  int32 code         = 1;   //转发消息的结果，1代表成功，其他表示失败
//  string msg          = 2;   //失败原因，code不等于1时msg字段的值有意义
//  string msgId        = 3;   //消息id
//  bytes msgContent   = 4;   //业务返回的结构
//}

//message ClientAuthMsg {
//    string token        = 1;
//    string userid         = 2;
//}
//
//message ParameterMsg {
//    string userId   = 1;
//    string channelId     = 2;
//}
//
message ToClientReq {
    string clientId    = 1;
    string msgType     = 2;
    bytes msgContent   = 3;
}
//有状态proxy错误码
message ToClientResp {
    int32 errorCode = 1;
    string errorMsg = 2;
}
//
//message RouterMsgReq {
//    string serviceName   = 1;
//    string msgId         = 2;
//    string msgType       = 3;
//    bytes msgContent     = 4;
//}
//
//
//登陆连接验证
message LoginMsgReq {
    string token          = 1; //从登陆平台获得的token
    string userId         = 2; //用户id
    string channelId      = 3; //用户渠道
    string appVersion = 4;  //客户端版本
    string resVersion = 5;  //资源版本
    string adId = 6;
}
//连接验证成功后就可以发送tcp消息
message LoginMsgResp {
    int32 errorCode = 1;
    string errorMsg     = 2;
}

//数据同步
message SyncInfo{
    //本地缓存开始序号/将要开始的，重新登陆时序号为0，后续继续调用TransferCacheReq直到count为0
    int32 startSeq = 1;
    //接收到的包序号
    int32 recReq = 2;
    //缓存数量,0代表没有缓存，多次同步，直到count为0
    int32 count = 3;
}
//断线重连
message LoginAndSyncReq{
    LoginMsgReq loginMsgReq = 1; //登陆参数
    SyncInfo syncInfo = 2;  // 断线重连发送的同步信息，服务器会根据客户端当前接受的包序列号，尝试将服务器发送的未被接收的数据进行补发
}

message LoginAndSyncResp{
    LoginMsgResp loginMsgResp = 1;
}

//断线重连成功时如果存在未发送数据，服务器内部会主动调用TransferCacheReq获取续传数据
message TransferCacheReq {
    string userId = 1;
    int32 podId = 2;
    SyncInfo syncInfo = 3;
}
//断线重连成功后，服务器会通过tcp连接发送该续传消息
message TransferCacheResp {
    enum ErrorType {
        OK = 0;
        ERROR = 1;
        USER_NOT_FOUND = 2;
        CACHE_INVALID = 3;
    }
    message SyncMsg{
        string msgId = 1;
        //客户端proxy传输协议
        bytes msg = 2;
        //消息sessionId
        int32 sessionId = 3;
        //消息的发送序号
        int32 sendSeq = 4;
        //消息的确认号
        int32 recReq = 5;
    }
    ErrorType errorCode = 1;
    string errorMsg = 2;
    int32 sendSeq = 3;  //当前服务器发送序号
    int32 recvSeq = 4;  //当前服务器接收到序号
    repeated SyncMsg syncMsgList = 5; //续传消息
}

// 有状态proxy断开连接消息
message DisconnectMsg{
    enum ErrorType //枚举消息类型
    {
        OTHER_USER_LOGIN = 0;//顶号
        OTHER_USER_RECONNECT = 1;//重连
        SERVER_CLOSE = 2;  // 关服
    }
    ErrorType errorCode = 1;
    string errorMsg = 2;
}

// 踢人消息
message KickUserMsg{
    string kickReason = 1;    // 被踢原因
}

message StateOfflineRequest{
    string reason = 1; //关闭原因
    int64  time = 2;  //关闭时间
}
